feat(notification-service): add subscription search by criteria
